@@ -449,10 +449,12 @@
     <Compile Include="NetSpecific\UnitTests\Fluent\FakeNHibernateConfiguration.cs" />
     <Compile Include="NetSpecific\UnitTests\Fluent\InheritanceTest.cs" />
     <Compile Include="NetSpecific\UnitTests\Fluent\LooselyTypedFluentAuditTests.cs" />
+    <Compile Include="NetSpecific\UnitTests\Fluent\MethodTest.cs" />
     <Compile Include="NetSpecific\UnitTests\Fluent\Model\FieldEntity.cs" />
     <Compile Include="NetSpecific\UnitTests\Fluent\Model\Inheritance.cs" />
     <Compile Include="NetSpecific\UnitTests\Fluent\Model\NotAuditedEntity.cs" />
     <Compile Include="NetSpecific\UnitTests\Fluent\Model\NotAuditedOwnerEntity.cs" />
+    <Compile Include="NetSpecific\UnitTests\Fluent\Model\PublicFieldAndMethodEntity.cs" />
     <Compile Include="NetSpecific\UnitTests\Fluent\Model\RevisionEntity.cs" />
     <Compile Include="NetSpecific\UnitTests\Fluent\Model\InheritedRevisionEntity.cs" />
     <Compile Include="NetSpecific\UnitTests\Fluent\Model\RevisionEntityWithEntityNames.cs" />
