@@ -5,5 +5,6 @@ namespace NHibernate.Envers.Tests.NetSpecific.UnitTests.Fluent.Model
 		public int Number { get; set; }
 		public string String { get; set; }
 		public string String2 { get; set; }
+		public int FieldNumber;
 	}
 }
