@@ -1,4 +1,3 @@
-using System;
 using System.Linq.Expressions;
 using System.Reflection;
 
@@ -6,14 +5,14 @@ namespace NHibernate.Envers.Configuration.Fluent
 {
 	public static class ExpressionExtension
 	{
-		public static MemberInfo MethodInfo<TBody>(this Expression<TBody> expression, string errText)
+		public static MemberInfo MethodInfo<TBody>(this Expression<TBody> expression)
 		{
 			var realType = expression.Parameters[0].Type;
-			var member = expression.Body.methodInfo(errText);
+			var member = expression.Body.methodInfo();
 			return realType.GetMember(member.Name)[0];
 		}
 
-		private static MemberInfo methodInfo(this Expression expression, string errText)
+		private static MemberInfo methodInfo(this Expression expression)
 		{
 			switch (expression.NodeType)
 			{
@@ -22,9 +21,9 @@ namespace NHibernate.Envers.Configuration.Fluent
 					return memberExpression.Member;
 				case ExpressionType.Convert:
 					var unaryExpression = (UnaryExpression)expression;
-					return methodInfo(unaryExpression.Operand, errText);
+					return methodInfo(unaryExpression.Operand);
 				default:
-					throw new ArgumentException("Cannot find property or field for " + errText);
+					throw new FluentException("Cannot resolve property or field " + expression);
 			}
 		}
 	}
